--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
-- degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+- degree: qwer
+  uni: 1234
+  year: June, 2017 &mdash; January, 2019
   # awards:
-  # summary:
+  # summary:rrrrrrrrrrrrrr
